--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Kontaktformular</h1>
+    <h1>Kontaktformulario</h1>
     <form class="Form1">
         <div> 
             <label for="fname">Vorname:</label>
