--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="Images/Logo.png" alt="logo Bärnläbt">
+    <img src="Images/Logo.png" alt="logo Bärnläbt" class="logo header">
 
 </body>
 </html>
