--- a/home.html
+++ b/home.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <img src="Images/Logo.png" alt="logo Bärnläbt" class="logo header">
+    <img src="Images/Logo.png" alt="logo Bärnläbt"; height: 20px; width: 20px; justify-content: center; align-items:
+        flex-start>
+    <div class="header">
+        <h1>wöus zäme meh fäggt!</h1>
+
 
 </body>
 
