CSS für Home erstellt und erste Inhalte der Homepage abgefüllt.

--- a/html/home.html
+++ b/html/home.html
@@ -5,18 +5,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
+
     <link rel="stylesheet" href="../CSS/main.css">
-    <link rel="stylesheet" href="../https://use.typekit.net/qvo7bqu.css">
     <link rel="stylesheet" href="../CSS/home.css">
+
 </head>
 
 <body>
     <header>
         <img src="../Images/Logo.png" alt="logo Bärnläbt" class="logo">
-        <div class="header">
-    </header>
-    <h1>wöus zäme meh fäggt! 13 </h1>
 
+
+        <h1>wöus zäme meh fäggt! 13 </h1>
+
+
+
+        <div class="flex-container">
+            <a href="home.html" class="button">Home</a>
+            <a href="angebot.html" class="button">Angebot</a>
+            <a href="über uns.html" class="button">Über uns</a>
+            <a href="kontakt.html" class="button">Kontakt</a>
+        </div>
+
+        <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
+
+        <img src="" alt="">
+        <h2>Gspändli finde </h2>
+        <p>Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf Events und Aktivitäten?
+            Dann finde jetzt Anlässe und Gleichgesinnte!
+        </p>
+
+        <h2>Event finden</h2>
+        <p>BÄRNLÄBT bietet dir die Möglichkeit kulturelle Veranstaltungen in der Stadt Bern zu suchen. 
+
+            Gleichzeitig helfen wir dir die ideale Begleitung für diesen Event zu finden.</p>
+          
+            <h2>z’zwoite machts meh Spass!</h2>
+            <p>Anhand deiner Interessen und Präferenzen finden wir passende Leute mit gleichen Hobbys und Leidenschaften.</p>
+            <h2>Event erstöue</h2>
+            <p>Auf BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und gleichgesinnte Personen finden, die sich für deine Veranstaltung interessieren. </p>
+            <h2>Hobby sueche</h2>
+            <p>Mit BÄRNLÄBT kannst du eine passende Freizeitaktivität finden und diese zusammen mit jemandem besuchen, der deine Leidenschaft teilt.</p>
+            <h2>Aktuelle Events</h2>
+
+    </header>
+
+    </div>
 
 </body>
 
