--- a/html/home.html
+++ b/html/home.html
@@ -13,13 +13,10 @@
 </head>
 
 <body>
+
     <header>
         <img src="../Images/Logo.png" alt="logo Bärnläbt" class="logo">
-
-
-        <h1>wöus zäme meh fäggt! 13 </h1>
-
-
+        <h1>wöus zäme meh fäggt! </h1>
 
         <div class=flex-container>
             <a href="home.html" class="button">Home</a>
@@ -31,70 +28,74 @@
         <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
     </header>
 
-    <section class=content>
+    <Article class=teaser>
         <div class="horizontal">
-            <img src="../Images/Logo.png" alt="platzhalter" class="platzhalter">
-            <div class="content">
+            <img src="../Images/01_Bild.jpeg" alt="platzhalter" class="platzhalter">
+            <div class="teasertext">
                 <h2>Gspändli finde </h2>
                 <p>Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf Events und Aktivitäten?
                     Dann finde jetzt Anlässe und Gleichgesinnte!
                 </p> <a href="angebot.html" class="button">Los gehts</a>
             </div>
-        </section>
+        </article>
 
-        <div class=content>
-            <div class="horizontal">
-                <div class="content">
+    <article class=teaser>
+        <div class="horizontal">
+            <div class="teasertext">
                 <h2>Event finden </h2>
                 <p>BÄRNLÄBT bietet dir die Möglichkeit kulturelle Veranstaltungen in der Stadt Bern zu suchen.
                     Gleichzeitig helfen wir dir die ideale Begleitung für diesen Event zu finden.
                 </p>
                 <a href="angebot.html" class="button">Mehr erfahren</a>
             </div>
-                <img src="../Images/Logo.png" alt="platzhalter" class="platzhalter">
-                <div class="content">
-                
-                </div>
+            <img src="../Images/09_Bild.jpeg" alt="platzhalter" class="platzhalter">
+            <div class="content">
+
             </div>
+        </article>
 
-            <h3>z'zwoite machts eifach machts meh Spass</h3>
+        <h3>z'zwoite machts eifach machts meh Spass</h3>
 
-            <div class=content>
-                <div class="horizontal">
-                    <img src="../Images/Logo.png" alt="platzhalter" class="platzhalter">
-                    <div class="content">
-                        <h2>Event erstöue</h2>
-                        <p>Auf BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und gleichgesinnte Personen finden, die sich
-                            für
-                            deine Veranstaltung interessieren. 
-                        </p> <a href="angebot.html" class="button">Los gehts</a>
-                    </div>
+<Img src="../Images/Smartphone mit Köpfen_Bärnläbt.png"  align-self="center"></Img>
+
+        <article class=teaser>
+            <div class="horizontal">
+                <img src="../Images/Logo.png" alt="platzhalter" class="platzhalter">
+                <div class="teasertext">
+                    <h2>Event erstöue</h2>
+                    <p>Auf BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und gleichgesinnte Personen finden,
+                        die sich
+                        für
+                        deine Veranstaltung interessieren. 
+                    </p> <a href="angebot.html" class="button">Los gehts</a>
                 </div>
+            </article>
 
 
-                <div class=content>
-                    <div class="horizontal">
-                        <div class="content">
+            <article class=content>
+                <div class="horizontal">
+                    <div class="teasertext">
                         <h2>Hobby sueche </h2>
-                        <p>Mit BÄRNLÄBT kannst du eine passende Freizeitaktivität finden und diese zusammen mit jemandem besuchen,
+                        <p>Mit BÄRNLÄBT kannst du eine passende Freizeitaktivität finden und diese zusammen mit jemandem
+                            besuchen,
                             der deine Leidenschaft teilt
                         </p>
                         <a href="angebot.html" class="button">Mehr erfahren</a>
                     </div>
-                        <img src="../Images/Logo.png" alt="platzhalter" class="platzhalter">
-                        <div class="content">
-                        
-                        </div>
+                    <img src="../Images/Logo.png" alt="platzhalter" class="platzhalter">
+                    <div class="content">
+
                     </div>
+                </article>
 
 
-            <h3>Aktuelle Events</h3>
+                <h3>Aktuelle Events</h3>
+            </div>
+
+
+
+
         </div>
-
-
-
-
-    </div>
 
 </body>
 
