changes to impressum

--- a/html/impressum.html
+++ b/html/impressum.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,40 @@
     <link rel="stylesheet" href="../https://use.typekit.net/qvo7bqu.css">
     <link rel="stylesheet" href="../CSS/impressum.css">
 </head>
+
 <body>
-    
+    <a href="http://127.0.0.1:5500/html/home.html" class="image-link" target="_blank">
+        <img src="Images/Logo klein.png" alt="logo_klein" class="image">
+    </a>
+    <h1>Impressum</h1>
+    <div class="flexbox">
+        <p id="container">
+        <h2>Kontaktadresse</h2>
+        <p>BÄRNLÄBT GmbH, Holzikofenweg 8, 3000 Bern, Schweiz</p>
+        <h2>Haftungsausschluss</h2>
+        <p>Der Autor übernimmt keinerlei Gewähr hinsichtlich der inhaltlichen Richtigkeit, Genauigkeit, Aktualität,
+            Zuverlässigkeit und Vollständigkeit der Informationen. Haftungsansprüche gegen den Autor wegen Schäden
+            materieller oder immaterieller Art, welche aus dem Zugriff oder der Nutzung bzw. Nichtnutzung der
+            veröffentlichten Informationen, durch Missbrauch der Verbindung oder durch technische Störungen entstanden
+            sind, werden ausgeschlossen. Alle Angebote sind unverbindlich. Der Autor behält es sich ausdrücklich vor,
+            Teile der Seiten oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen
+            oder die Veröffentlichung zeitweise oder endgültig einzustellen. Haftung für Links Verweise und Links auf
+            Webseiten Dritter liegen ausserhalb unseres Verantwortungsbereichs. Es wird jegliche Verantwortung für
+            solche Webseiten abgelehnt. Der Zugriff und die Nutzung solcher Webseiten erfolgen auf eigene Gefahr des
+            Nutzers oder der Nutzerin.</p>
+        <h2>Urheberrechte</h2>
+        <p>Die Urheber- und alle anderen Rechte an Inhalten, Bildern, Fotos oder anderen Dateien auf der Website gehören
+            ausschliesslich der Firma BÄRNLÄBT GmbH oder den speziell genannten Rechtsinhabern. Für die Reproduktion
+            jeglicher Elemente ist die schriftliche Zustimmung der Urheberrechtsträger im Voraus einzuholen.</p>
+        <h2>Datenschutz</h2>
+        <p>Gestützt auf Artikel 13 der schweizerischen Bundesverfassung und die datenschutzrechtlichen Bestimmungen des
+            Bundes (Datenschutzgesetz, DSG) hat jede Person Anspruch auf Schutz ihrer Privatsphäre sowie auf Schutz vor
+            Missbrauch ihrer persönlichen Daten. Wir halten diese Bestimmungen ein. Persönliche Daten werden streng
+            vertraulich behandelt und weder an Dritte verkauft noch weiter gegeben. In enger Zusammenarbeit mit unseren
+            Hosting-Providern bemühen wir uns, die Datenbanken so gut wie möglich vor fremden Zugriffen, Verlusten,
+            Missbrauch oder vor Fälschung zu schützen.</p>
+        </p>
+
 </body>
+
 </html>
