Inserted first versions of Events

--- a/html/home.html
+++ b/html/home.html
@@ -37,7 +37,7 @@
                     Dann finde jetzt Anlässe und Gleichgesinnte!
                 </p> <a href="angebot.html" class="button">Los gehts</a>
             </div>
-        </article>
+    </article>
 
     <article class=teaser>
         <div class="horizontal">
@@ -52,50 +52,57 @@
             <div class="content">
 
             </div>
-        </article>
+    </article>
 
-        <h3>z'zwoite machts eifach machts meh Spass</h3>
+    <h3>z'zwoite machts eifach machts meh Spass</h3>
 
-<Img src="../Images/Smartphone mit Köpfen_Bärnläbt.png"  align-self="center"></Img>
+    <Img src="../Images/Smartphone mit Köpfen_Bärnläbt.png" align-self="center"></Img>
 
-        <article class=teaser>
-            <div class="horizontal">
-                <img src="../Images/Logo.png" alt="platzhalter" class="platzhalter">
-                <div class="teasertext">
-                    <h2>Event erstöue</h2>
-                    <p>Auf BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und gleichgesinnte Personen finden,
-                        die sich
-                        für
-                        deine Veranstaltung interessieren. 
-                    </p> <a href="angebot.html" class="button">Los gehts</a>
-                </div>
-            </article>
-
-
-            <article class=content>
-                <div class="horizontal">
-                    <div class="teasertext">
-                        <h2>Hobby sueche </h2>
-                        <p>Mit BÄRNLÄBT kannst du eine passende Freizeitaktivität finden und diese zusammen mit jemandem
-                            besuchen,
-                            der deine Leidenschaft teilt
-                        </p>
-                        <a href="angebot.html" class="button">Mehr erfahren</a>
-                    </div>
-                    <img src="../Images/Logo.png" alt="platzhalter" class="platzhalter">
-                    <div class="content">
-
-                    </div>
-                </article>
-
-
-                <h3>Aktuelle Events</h3>
+    <article class=teaser>
+        <div class="horizontal">
+            <img src="../Images/Logo.png" alt="platzhalter" class="platzhalter">
+            <div class="teasertext">
+                <h2>Event erstöue</h2>
+                <p>Auf BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und gleichgesinnte Personen finden,
+                    die sich
+                    für
+                    deine Veranstaltung interessieren. 
+                </p> <a href="angebot.html" class="button">Los gehts</a>
             </div>
+    </article>
 
 
+    <article class=content>
+        <div class="horizontal">
+            <div class="teasertext">
+                <h2>Hobby sueche </h2>
+                <p>Mit BÄRNLÄBT kannst du eine passende Freizeitaktivität finden und diese zusammen mit jemandem
+                    besuchen,
+                    der deine Leidenschaft teilt
+                </p>
+                <a href="angebot.html" class="button">Mehr erfahren</a>
+            </div>
+            <img src="../Images/Logo.png" alt="platzhalter" class="platzhalter">
+            <div class="content">
 
-
+            </div>
         </div>
+    </article>
+
+
+    <h3>Aktuelle Events</h3>
+    <Section class="eventliste">
+        <h3>Aktuelle Events</h3>
+        <article class="event">
+            <p> Event event event event</p>
+        </article>
+        <article class="event">
+            <p> Event event event event</p>
+        </article>
+        <article class="event">
+            <p> Event event event event</p>
+        </article>
+    </Section>
 
 </body>
 
