--- a/html/home.html
+++ b/html/home.html
@@ -23,6 +23,7 @@
             <a href="angebot.html" class="button">Angebot</a>
             <a href="über uns.html" class="button">Über uns</a>
             <a href="kontakt.html" class="button">Kontakt</a>
+            <a href="impressum.html" class="button">Impressum</a>
         </div>
 
         <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
@@ -56,18 +57,22 @@
 
     <h3>z'zwoite machts eifach machts meh Spass</h3>
 
-    <Img src="../Images/Smartphone mit Köpfen_Bärnläbt.png" align-self="center"></Img>
+    <div class="largeimage">
+        <Img src="../Images/Smartphone mit Köpfen_Bärnläbt.png">
+    </div>
 
     <article class=teaser>
         <div class="horizontal">
             <img src="../Images/Logo.png" alt="platzhalter" class="platzhalter">
             <div class="teasertext">
                 <h2>Event erstöue</h2>
-                <p>Auf BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und gleichgesinnte Personen finden,
+                <p>
+                    Auf BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und gleichgesinnte Personen finden,
                     die sich
                     für
-                    deine Veranstaltung interessieren. 
-                </p> <a href="angebot.html" class="button">Los gehts</a>
+                    deine Veranstaltung interessieren.
+                </p>
+                <a href="angebot.html" class="button">Los gehts</a>
             </div>
     </article>
 
@@ -94,7 +99,11 @@
     <Section class="eventliste">
         <h3>Aktuelle Events</h3>
         <article class="event">
-            <p> Event event event event</p>
+            <div class="eventdatum"></div>
+            <p class="eventtag">90</p>
+            <p> Ett</p>
+            </div>
+            
         </article>
         <article class="event">
             <p> Event event event event</p>
