made some corrections.

--- a/html/home.html
+++ b/html/home.html
@@ -13,106 +13,108 @@
 </head>
 
 <body>
+    <main>
+        <header>
+            <img src="../Images/Logo.png" alt="logo Bärnläbt" class="logo">
+            <h1>wöus zäme meh fäggt! </h1>
 
-    <header>
-        <img src="../Images/Logo.png" alt="logo Bärnläbt" class="logo">
-        <h1>wöus zäme meh fäggt! </h1>
+            <div class="menu-container">
+                <a href="home.html" class="button">Home</a>
+                <a href="angebot.html" class="button">Angebot</a>
+                <a href="über uns.html" class="button">Über uns</a>
+                <a href="kontakt.html" class="button">Kontakt</a>
+                <a href="impressum.html" class="button">Impressum</a>
+            </div>
 
-        <div class=flex-container>
-            <a href="home.html" class="button">Home</a>
-            <a href="angebot.html" class="button">Angebot</a>
-            <a href="über uns.html" class="button">Über uns</a>
-            <a href="kontakt.html" class="button">Kontakt</a>
-            <a href="impressum.html" class="button">Impressum</a>
+            <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
+        </header>
+
+        <Article class="teaser">
+            <div class="horizontal">
+                <img src="../Images/01_Bild.jpeg" alt="platzhalter" class="teaserimage">
+                <div class="teasertext" class="ttrechts">
+                    <h2>Gspändli finde </h2>
+                    <p>Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf Events und Aktivitäten?
+                        Dann finde jetzt Anlässe und Gleichgesinnte!
+                    </p> <a href="angebot.html" class="button">Los gehts</a>
+                </div>
+            </div>
+        </article>
+
+        <article class="teaser">
+            <div class="horizontal">
+                <div class="teasertext" class="ttlinks">
+                    <h2>Event finden </h2>
+                    <p>BÄRNLÄBT bietet dir die Möglichkeit kulturelle Veranstaltungen in der Stadt Bern zu suchen.
+                        Gleichzeitig helfen wir dir die ideale Begleitung für diesen Event zu finden.
+                    </p>
+                    <a href="angebot.html" class="button">Mehr erfahren</a>
+                </div>
+                <img src="../Images/09_Bild.jpeg" alt="platzhalter" class="platzhalter">
+            </div>
+        </article>
+
+        <h3>z'zwoite machts eifach machts meh Spass</h3>
+
+        <div class="teaser">
+            <Img src="../Images/Smartphone mit Köpfen_Bärnläbt.png" class="largeimage">
         </div>
 
-        <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
-    </header>
-
-    <Article class=teaser>
-        <div class="horizontal">
-            <img src="../Images/01_Bild.jpeg" alt="platzhalter" class="platzhalter">
-            <div class="teasertext">
-                <h2>Gspändli finde </h2>
-                <p>Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf Events und Aktivitäten?
-                    Dann finde jetzt Anlässe und Gleichgesinnte!
-                </p> <a href="angebot.html" class="button">Los gehts</a>
+        <article class="teaser">
+            <div class="horizontal">
+                <img src="../Images/15_bild.png" alt="platzhalter" class="platzhalter">
+                <div class="teasertext">
+                    <h2>Event erstöue</h2>
+                    <p>
+                        Auf BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und gleichgesinnte Personen finden,
+                        die sich
+                        für
+                        deine Veranstaltung interessieren.
+                    </p>
+                    <a href="angebot.html" class="button">Los gehts</a>
+                </div>
             </div>
-    </article>
-
-    <article class=teaser>
-        <div class="horizontal">
-            <div class="teasertext">
-                <h2>Event finden </h2>
-                <p>BÄRNLÄBT bietet dir die Möglichkeit kulturelle Veranstaltungen in der Stadt Bern zu suchen.
-                    Gleichzeitig helfen wir dir die ideale Begleitung für diesen Event zu finden.
-                </p>
-                <a href="angebot.html" class="button">Mehr erfahren</a>
-            </div>
-            <img src="../Images/09_Bild.jpeg" alt="platzhalter" class="platzhalter">
-            <div class="content">
-
-            </div>
-    </article>
-
-    <h3>z'zwoite machts eifach machts meh Spass</h3>
-
-    <div class="largeimage">
-        <Img src="../Images/Smartphone mit Köpfen_Bärnläbt.png">
-    </div>
-
-    <article class=teaser>
-        <div class="horizontal">
-            <img src="../Images/Logo.png" alt="platzhalter" class="platzhalter">
-            <div class="teasertext">
-                <h2>Event erstöue</h2>
-                <p>
-                    Auf BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und gleichgesinnte Personen finden,
-                    die sich
-                    für
-                    deine Veranstaltung interessieren.
-                </p>
-                <a href="angebot.html" class="button">Los gehts</a>
-            </div>
-    </article>
-
-
-    <article class=content>
-        <div class="horizontal">
-            <div class="teasertext">
-                <h2>Hobby sueche </h2>
-                <p>Mit BÄRNLÄBT kannst du eine passende Freizeitaktivität finden und diese zusammen mit jemandem
-                    besuchen,
-                    der deine Leidenschaft teilt
-                </p>
-                <a href="angebot.html" class="button">Mehr erfahren</a>
-            </div>
-            <img src="../Images/Logo.png" alt="platzhalter" class="platzhalter">
-            <div class="content">
-
-            </div>
-        </div>
-    </article>
-
-
-    <h3>Aktuelle Events</h3>
-    <Section class="eventliste">
-        <h3>Aktuelle Events</h3>
-        <article class="event">
-            <div class="eventdatum"></div>
-            <p class="eventtag">90</p>
-            <p> Ett</p>
-            </div>
-            
         </article>
-        <article class="event">
-            <p> Event event event event</p>
-        </article>
-        <article class="event">
-            <p> Event event event event</p>
-        </article>
-    </Section>
 
+
+        <article class="content">
+            <div class="horizontal">
+                <div class="teasertext">
+                    <h2>Hobby sueche </h2>
+                    <p>Mit BÄRNLÄBT kannst du eine passende Freizeitaktivität finden und diese zusammen mit jemandem
+                        besuchen,
+                        der deine Leidenschaft teilt
+                    </p>
+                    <a href="angebot.html" class="button">Mehr erfahren</a>
+                </div>
+                <img src="../Images/15_Bild.png" alt="platzhalter" class="platzhalter">
+            </div>
+        </article>
+
+
+        <Section class="eventliste">
+            <h3>Aktuelle Events</h3>
+
+            <article class="event">
+                <div>
+                    <h2>Event name</h2>event text
+                </div>
+                <div class="eventdatum"></div>
+                <p class="eventtag">90</p>
+                <p class="eventmonat"> Ett</p>
+                </div>
+
+            </article>
+
+
+            <article class="event">
+                <p> Event event event event</p>
+            </article>
+            <article class="event">
+                <p> Event event event event</p>
+            </article>
+        </Section>
+    </main>
 </body>
 
 </html>
