added user Reviews

--- a/html/home.html
+++ b/html/home.html
@@ -28,92 +28,143 @@
 
             <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
         </header>
-
-        <Article class="teaser">
-            <div class="horizontal">
-                <img src="../Images/01_Bild.jpeg" alt="platzhalter" class="teaserimage">
-                <div class="teasertext" class="ttrechts">
-                    <h2>Gspändli finde </h2>
-                    <p>Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf Events und Aktivitäten?
+        <section>
+            <Article class="teaser">
+                <img src="../Images/01_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander" class="teaserimage">
+                <div class="teaserBoxRechts">
+                    <h2 class="teaserTextRechts">Gspändli finden</h2>
+                    <p class="teaserTextRechts">Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf
+                        Events
+                        und Aktivitäten?
                         Dann finde jetzt Anlässe und Gleichgesinnte!
-                    </p> <a href="angebot.html" class="button">Los gehts</a>
+                    </p> <a href="angebot.html" class="button" class="teaserTextRechts">Los gehts</a>
                 </div>
-            </div>
-        </article>
+            </article>
 
-        <article class="teaser">
-            <div class="horizontal">
-                <div class="teasertext" class="ttlinks">
-                    <h2>Event finden </h2>
-                    <p>BÄRNLÄBT bietet dir die Möglichkeit kulturelle Veranstaltungen in der Stadt Bern zu suchen.
-                        Gleichzeitig helfen wir dir die ideale Begleitung für diesen Event zu finden.
-                    </p>
-                    <a href="angebot.html" class="button">Mehr erfahren</a>
+            <article class="teaser">
+                <div class="horizontal">
+                    <div class="teaserBoxLinks">
+                        <h2 class="teaserTextLinks">Event finde</h2>
+                        <p class="teaserTextLinks">BÄRNLÄBT bietet dir die Möglichkeit kulturelle Veranstaltungen in der
+                            Stadt Bern zu suchen.
+                            Gleichzeitig helfen wir dir die ideale Begleitung für diesen Event zu finden.
+                        </p>
+                        <a href="angebot.html" class="button" class="teaserTextLinks">Mehr erfahren</a>
+                    </div>
+                    <img src="../Images/09_Bild.jpeg" alt="platzhalter" class="teaserimage">
                 </div>
-                <img src="../Images/09_Bild.jpeg" alt="platzhalter" class="platzhalter">
-            </div>
-        </article>
+            </article>
 
-        <h3>z'zwoite machts eifach machts meh Spass</h3>
+            <h3>z'zwoite machts eifach meh Spass</h3>
 
-        <div class="teaser">
-            <Img src="../Images/Smartphone mit Köpfen_Bärnläbt.png" class="largeimage">
-        </div>
+            <article class="teaser">
+                <Img src="../Images/Smartphone mit Köpfen_Bärnläbt.png" class="largeimage">
+            </article>
 
-        <article class="teaser">
-            <div class="horizontal">
-                <img src="../Images/15_bild.png" alt="platzhalter" class="platzhalter">
-                <div class="teasertext">
-                    <h2>Event erstöue</h2>
-                    <p>
-                        Auf BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und gleichgesinnte Personen finden,
-                        die sich
-                        für
-                        deine Veranstaltung interessieren.
-                    </p>
-                    <a href="angebot.html" class="button">Los gehts</a>
+            <Article class="teaser">
+                <img src="../Images/10_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander" class="teaserimage">
+                <div class="teaserBoxRechts">
+                    <h2 class="teaserTextRechts">Event erstöue</h2>
+                    <p class="teaserTextRechts">Aus BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und
+                        gleichgesinnte Personen finden, die sich für deine Veranstaltung interessieren.
+                    </p> <a href="angebot.html" class="button" class="teaserTextRechts">Los gehts</a>
                 </div>
-            </div>
-        </article>
+            </article>
 
-
-        <article class="content">
-            <div class="horizontal">
-                <div class="teasertext">
-                    <h2>Hobby sueche </h2>
-                    <p>Mit BÄRNLÄBT kannst du eine passende Freizeitaktivität finden und diese zusammen mit jemandem
-                        besuchen,
-                        der deine Leidenschaft teilt
-                    </p>
-                    <a href="angebot.html" class="button">Mehr erfahren</a>
+            <article class="teaser">
+                <div class="horizontal">
+                    <div class="teaserBoxLinks">
+                        <h2 class="teaserTextLinks">Hobby sueche</h2>
+                        <p class="teaserTextLinks">Mit BÄRNLÄBT kannst du eine passende Freizeitaktivität finden un
+                            diese
+                            zusammen mit jemandem besuchen, der deine Leidenschaft teilt.
+                        </p>
+                        <a href="angebot.html" class="button" class="teaserTextLinks">Mehr erfahren</a>
+                    </div>
+                    <img src="../Images/15_Bild.png" alt="platzhalter" class="teaserimage">
                 </div>
-                <img src="../Images/15_Bild.png" alt="platzhalter" class="platzhalter">
-            </div>
-        </article>
+            </article>
+
+
+        </section>
 
 
         <Section class="eventliste">
-            <h3>Aktuelle Events</h3>
+            <h2>Aktuelle Events</h2>
 
-            <article class="event">
+            <article class="event" id="eventGrün">
                 <div>
-                    <h2>Event name</h2>event text
+                    <h2 class="eventTitel">Event name</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce
+                        posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna
+                        eros quis urna.
+                        Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus.
+                    </p>
                 </div>
-                <div class="eventdatum"></div>
-                <p class="eventtag">90</p>
-                <p class="eventmonat"> Ett</p>
+                <div class="eventDatum">
+                    <p class="eventTag">09</p>
+                    <p class="eventMonat"> NOV</p>
                 </div>
 
             </article>
 
+            <article class="event" id="eventRot">
+                <div>
+                    <h2 class="eventTitel">Event name</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce
+                        posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna
+                        eros quis urna.
+                        Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus.
+                    </p>
+                </div>
+                <div class="eventDatum">
+                    <p class="eventTag">12</p>
+                    <p class="eventMonat"> NOV</p>
+                </div>
 
-            <article class="event">
-                <p> Event event event event</p>
             </article>
-            <article class="event">
-                <p> Event event event event</p>
+            <article class="event" id="eventPink">
+                <div>
+                    <h2 class="eventTitel">Event name</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce
+                        posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna
+                        eros quis urna.
+                        Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus.
+                    </p>
+                </div>
+                <div class="eventDatum">
+                    <p class="eventTag">13</p>
+                    <p class="eventMonat"> NOV</p>
+                </div>
+
             </article>
+            <a href="angebot.html" class="button" class="teaserTextLinks">Mehr erfahren</a>
         </Section>
+
+        <section class="boxRezensionen">
+            <article class="userRezension">
+                <img src="../Images/15_Bild.png" alt="Bild User" class="portraitRezensionen">
+                <p class="nameRezensionen">Name</p>
+                <p class="textRezensionen">rezension</p>
+                <p class="datumRezensionen">bei BÄRNLÄBT seit 2023</p>
+            </article>
+            <article class="userRezension">
+                <img src="../Images/15_Bild.png" alt="Bild User" class="portraitRezensionen">
+                <p class="nameRezensionen">Name</p>
+                <p class="textRezensionen">rezension</p>
+                <p class="datumRezensionen">bei BÄRNLÄBT seit 2023</p>
+            </article>
+            <article class="userRezension">
+                <img src="../Images/15_Bild.png" alt="Bild User" class="portraitRezensionen">
+                <p class="nameRezensionen">Name</p>
+                <p class="textRezensionen">rezension</p>
+                <p class="datumRezensionen">bei BÄRNLÄBT seit 2023</p>
+            </article>
+
+
+
+        </section>
+
     </main>
 </body>
 
