Angebot Seite gestartet. korrekturen auf Homepaage. Offene Problematik: Input Serif schrift auf anderen Pages.

--- a/html/Angebot.html
+++ b/html/Angebot.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,59 @@
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="../https://use.typekit.net/qvo7bqu.css">
     <link rel="stylesheet" href="../CSS/Angebot.css">
-
 </head>
+
+
 <body>
-    
+    <main>
+        <header>
+            <img src="../Images/Logo klein.png" alt="logo Bärnläbt" class="logo">
+
+            <div class="menu-container">
+                <a href="home.html" class="button">Home</a>
+                <a href="angebot.html" class="buttonActive">Angebot</a>
+                <a href="über uns.html" class="button">Über uns</a>
+                <a href="kontakt.html" class="button">Kontakt</a>
+                <a href="impressum.html" class="button">Impressum</a>
+            </div>
+
+            <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
+        </header>
+        <section class="sectionCalendar">
+            <article class="datumswahl">
+                <p class="datumPfeile"> < </p>
+                        <p class="datum">Heute</p>
+                        <p class="datumPfeile">></p>
+            </article>
+            <article class="mapKalender">
+
+                <img src="../Images/Logo.png" alt="Eventkarte" class="eventKarte">
+                <img src="../Images/Logo.png" alt="Eventkalender" class="eventKarte">
+
+            </article>
+
+            <article class="suchbox">
+                <p>Uf was häsch bock?</p>
+                <img src="../Images/Icons/Profil.png" alt="suche" id="suchIcon">
+
+            </article>
+
+            <article class="einladungBox">
+                <p class="einladungTitel">Mach den ersten Schritt</p>
+                <p>Neugierig auf neue Gspändli in deiner Umgebung?</p>
+                <div class=einladungAnmeldung>
+                    <p id="anmeldung">Anmeldung</p>
+                    <p id="registrieren">Registrieren</p>
+                </div>
+            </article>
+
+        </section>
+        <section>
+            <h3 id="schnöigge">chasch ruhig chli schnöigge</h3>
+            <p></p>
+        </section>
+
+
 </body>
+
 </html>
