--- a/html/home.html
+++ b/html/home.html
@@ -15,11 +15,11 @@
 <body>
     <main>
         <header>
-            <img src="../Images/Logo.png" alt="logo Bärnläbt" class="logo">
+            <img src="../Images/Logo.png" alt="logo Bärnläbt" class="logoHome">
             <h1>wöus zäme meh fäggt! </h1>
 
             <div class="menu-container">
-                <a href="home.html" class="button">Home</a>
+                <a href="home.html" class="buttonActive">Home</a>
                 <a href="angebot.html" class="button">Angebot</a>
                 <a href="über uns.html" class="button">Über uns</a>
                 <a href="kontakt.html" class="button">Kontakt</a>
