WEiter geareitet an Angebot page.

--- a/html/Angebot.html
+++ b/html/Angebot.html
@@ -55,12 +55,21 @@
             </article>
 
         </section>
-        <section>
+        <section class="sectionBeschreibung">
             <h3 id="schnöigge">chasch ruhig chli schnöigge</h3>
-            <p></p>
+            <p class="beschreibungTextTitel">Entdecke unseren Kalender voller aktueller Events.</p>
+            <p class="beschreibungText">An einem Interessiert? Ausgezeichnet!</p>
+            <p class="beschreibungText">Wir helfen dir, die ideale Beglietung zu finden, damit du nicht alleine losziehen must.</p>
+        
+<div class="angebotLink">
+    <a href="impressum.html" id="zurKarte">zur Karte</a>
+    <a href="impressum.html" id="zumKalender">zum Kalender</a>
+    
+</div>
+
         </section>
 
-
+    </main>
 </body>
 
 </html>
