made some small color corrections.

--- a/html/home.html
+++ b/html/home.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
-
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="../CSS/home.css">
 
@@ -161,6 +160,7 @@
                 <p class="datumRezensionen">bei BÄRNLÄBT seit 2023</p>
             </article>
         </section>
+
         <footer>
             <section class="footerTextContainer" id="footerColumn1">
                 <p class="footerTitel">BÄRNLÄBT GmbH</p>
@@ -189,12 +189,13 @@
             </section>
 
             <section class="footerLogosContainer " id="footerColumn4">
-                <img src="../Images/Logo.png" alt="platzhalter" class="footerSoMe">
-                <img src="../Images/Logo.png" alt="platzhalter" class="footerSoMe">
-                <img src="../Images/Logo.png" alt="platzhalter" class="footerSoMe">
-            </section>
+                <img src="../Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
+                <img src="../Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
+                <img src="../Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
+                <img src="../Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
 
             </section>
+
         </footer>
 
         <div class="footerLogoContainer">
