Provisorische Version Angebot Page fertig.

--- a/html/Angebot.html
+++ b/html/Angebot.html
@@ -28,7 +28,8 @@
         </header>
         <section class="sectionCalendar">
             <article class="datumswahl">
-                <p class="datumPfeile"> < </p>
+                <p class="datumPfeile">
+                    < </p>
                         <p class="datum">Heute</p>
                         <p class="datumPfeile">></p>
             </article>
@@ -57,16 +58,36 @@
         </section>
         <section class="sectionBeschreibung">
             <h3 id="schnöigge">chasch ruhig chli schnöigge</h3>
-            <p class="beschreibungTextTitel">Entdecke unseren Kalender voller aktueller Events.</p>
-            <p class="beschreibungText">An einem Interessiert? Ausgezeichnet!</p>
-            <p class="beschreibungText">Wir helfen dir, die ideale Beglietung zu finden, damit du nicht alleine losziehen must.</p>
-        
-<div class="angebotLink">
-    <a href="impressum.html" id="zurKarte">zur Karte</a>
-    <a href="impressum.html" id="zumKalender">zum Kalender</a>
-    
-</div>
+            <article>
+                <p class="paragraphTitel">Entdecke unseren Kalender voller aktueller Events.</p>
+                <p class="paragraphText">An einem Interessiert? Ausgezeichnet!</p>
+                <p class="paragraphText">Wir helfen dir, die ideale Beglietung zu finden, damit du nicht alleine
+                    losziehen must.</p>
+            </article>
+            <div class="angebotLink">
+                <a href="impressum.html" id="zurKarte">zur Karte</a>
+                <a href="impressum.html" id="zumKalender">zum Kalender</a>
+            </div>
 
+            <h3 id="weird">«Egau, wie weird du besch, do dosse gets no öpper wo genauso tickt.»</h3>
+            <article>
+                <p class="paragraphTitel">Möchtest du einen eigenen Event organisieren?</p>
+                <p class="paragraphText">Dann trage es einfach in deinen privaten Kalender ein und stelle die
+                    Veranstaltung auf öffentlich.</p>
+                <p class="paragraphText">Zeige deinen Matches, was du als Gastgeber:in draufhast. </p>
+            </article>
+            <img src="../Images/Angebot/iPhone Beerpong.png"
+                alt="Bild mit zwei iPhones worauf gerade eine Beerpong Party abgemacht wird">
+            <h3>«e Verein fäggt, imfau!»</h3>
+            <article>
+                <p class="paragraphTitel">Entdecke deinen Verein.</p>
+                <p class="paragraphText">Check auch unsere Liste mit Vereinen aus. Egal, ob du für etwas Neues brennst oder einfach mal reinschnuppern willst: Hier wirst du fündig.</p>
+<p class="paragraphText">Finde deine neue Lieblingsbeschäftigung und knüpfe Kontakte. Die nächste grosse Leidenschaft wartet schon auf dich. </p>
+<a href="home.html" class="button">alle Vereine</a> 
+
+            </article>
+
+            <a class="button"> Impressum </a>
         </section>
 
     </main>
