--- a/html/home.html
+++ b/html/home.html
@@ -29,7 +29,7 @@
         </header>
         <section>
             <Article class="teaser">
-                <img src="../Images/01_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander" class="teaserimage">
+                <img src="../Images/home/01_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander" class="teaserimage">
                 <div class="teaserBoxRechts">
                     <h2 class="teaserTextRechts">Gspändli finden</h2>
                     <p class="teaserTextRechts">Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf
@@ -50,18 +50,18 @@
                         </p>
                         <a href="angebot.html" class="button" class="teaserTextLinks">Mehr erfahren</a>
                     </div>
-                    <img src="../Images/09_Bild.jpeg" alt="platzhalter" class="teaserimage">
+                    <img src="../Images/home/09_Bild.jpeg" alt="platzhalter" class="teaserimage">
                 </div>
             </article>
 
             <h3>z'zwoite machts eifach meh Spass</h3>
 
             <article class="teaser">
-                <Img src="../Images/Smartphone mit Köpfen_Bärnläbt.png" class="largeimage">
+                <Img src="../Images/Home/Smartphone mit Köpfen_Bärnläbt.png" class="largeimage">
             </article>
 
             <Article class="teaser">
-                <img src="../Images/10_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander" class="teaserimage">
+                <img src="../Images/home/10_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander" class="teaserimage">
                 <div class="teaserBoxRechts">
                     <h2 class="teaserTextRechts">Event erstöue</h2>
                     <p class="teaserTextRechts">Aus BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und
@@ -80,7 +80,7 @@
                         </p>
                         <a href="angebot.html" class="button" class="teaserTextLinks">Mehr erfahren</a>
                     </div>
-                    <img src="../Images/15_Bild.png" alt="platzhalter" class="teaserimage">
+                    <img src="../Images/home/15_Bild.png" alt="platzhalter" class="teaserimage">
                 </div>
             </article>
 
@@ -142,19 +142,19 @@
 
         <section class="boxRezensionen">
             <article class="userRezension">
-                <img src="../Images/15_Bild.png" alt="Bild User" class="portraitRezensionen">
+                <img src="../Images/home/15_Bild.png" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Name</p>
                 <p class="textRezensionen">rezension</p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit 2023</p>
             </article>
             <article class="userRezension">
-                <img src="../Images/15_Bild.png" alt="Bild User" class="portraitRezensionen">
+                <img src="../Images/home/15_Bild.png" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Name</p>
                 <p class="textRezensionen">rezension</p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit 2023</p>
             </article>
             <article class="userRezension">
-                <img src="../Images/15_Bild.png" alt="Bild User" class="portraitRezensionen">
+                <img src="../Images/home/15_Bild.png" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Name</p>
                 <p class="textRezensionen">rezension</p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit 2023</p>
